vendor/cargo/auto_impl-0.5.0/tests/compile-fail/value_self_for_immutable_ref.stderr
error: the trait `Foo` cannot be auto-implemented for immutable references, because this method has a `self` receiver

  = note: only `&self` and no receiver are allowed

 --> $DIR/value_self_for_immutable_ref.rs:6:5
  |
6 |     fn foo(self);
  |     ^^
